--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,19 @@
 cmake_minimum_required(VERSION 3.10)
-project(HttpWebcamStream)
+
+project(WebcamStreamServer)
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(GST REQUIRED gstreamer-1.0 gstreamer-video-1.0 gstreamer-webm-1.0)
+# Find OpenCV package for webcam/video capture and image encoding
+find_package(OpenCV REQUIRED)
 
-include_directories(${GST_INCLUDE_DIRS})
-link_directories(${GST_LIBRARY_DIRS})
+# Find Boost libraries (header-only for Asio or you can link Boost.Asio explicitly)
+find_package(Boost REQUIRED COMPONENTS system thread)
 
-add_executable(http_webcam_stream http_webcam_stream.cpp)
-target_link_libraries(http_webcam_stream ${GST_LIBRARIES})
+include_directories(${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+
+add_executable(webcam_stream src/main.cpp)
+
+target_link_libraries(webcam_stream ${OpenCV_LIBS} ${Boost_LIBRARIES})
+
